<resources>
    <string name="app_name">NotesApp</string>
    <string name="add_note">Add Note</string>
    <string name="search">Search</string>
    <string name="filter_by_priority">Filter by Priority</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="note_image">Image</string>
    <string name="note_priority">Priority</string>
    <string name="save">Save</string>
    <string name="sort_by_priority">Sort by Priority</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="set_date_time">Set Date and Time</string>
    <string-array name="priority_levels">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="confirm_delete">Delete Note</string>
    <string name="confirm_delete_message">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_note">Delete</string>
    <string name="font_size">Font Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="settings">Settings</string>
</resources>

