<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:inputType="text"
        android:padding="20dp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_description"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:minLines="3" />

    <Spinner
        android:id="@+id/spPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/priority_levels"
        android:padding="20dp" />

    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/appointment_time"
        android:padding="8dp"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnSetDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_date_time" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/note_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save" />

</LinearLayout>